--- a/conf/php/7/3/php-fpm.conf
+++ b/conf/php/7/3/php-fpm.conf
@@ -577,4 +577,6 @@ php_admin_value[memory_limit] = 256M
 ; log PHP errors to a file, otherwise they're bubbled up through FPM via stderr
 php_value[error_log] = /tmp/heroku.php-fpm.www.${PORT}.log
 
+memory_limit = 256M
+
 include=${HEROKU_PHP_FPM_CONFIG_INCLUDE}
