--- a/conf/php/7/3/php-fpm.conf
+++ b/conf/php/7/3/php-fpm.conf
@@ -514,7 +514,7 @@ slowlog = /tmp/heroku.php-fpm.${PORT}.www.slowlog
 ; Note: on highloaded environement, this can cause some delay in the page
 ; process time (several ms).
 ; Default Value: no
-catch_workers_output = yes
+catch_s_output = yes
 
 ; Decorate worker output with prefix and suffix containing information about
 ; the child that writes to the log and if stdout or stderr is used as well as
@@ -576,7 +576,5 @@ php_admin_value[memory_limit] = 256M
 
 ; log PHP errors to a file, otherwise they're bubbled up through FPM via stderr
 php_value[error_log] = /tmp/heroku.php-fpm.www.${PORT}.log
-
-memory_limit = 256M
 
 include=${HEROKU_PHP_FPM_CONFIG_INCLUDE}
